tdf#99383 vcl: don't dispatch events from SolarMutexReleaser

Having SolarMutexReleaser effectively do Reschedule() on WNT and not on
other platforms doesn't seem such a good idea.  Let's try to restrict it
so that it still calls ImplSalYieldMutexAcquireWithWait() but no longer
dispatches messages, timers and idles.

(regression from 482c52e91fe41a52e68827e9bf64a9736427d517)

Change-Id: I52a2c88e9c2473e35909bf270b9e3ae7acbe0d17
(cherry picked from commit ea3ce0b3073c72f474365e438ddabd19de915b76)